[package]
name = "MainFrame"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["secrets"] }
rocket_db_pools = { version = "0.1.0-rc.2", features = ["sqlx_sqlite", "sqlx_mssql"] }
sqlx = "0.5.13"
async-trait = "0.1.57"
data-encoding = "2.3.2"
rand = "0.8.5"
pbkdf2 = "0.11.0"
ring = "0.16.20"
rocket-multipart-form-data = "0.10.3"
