[package]
name = "MainFrame"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["secrets"] }
rocket_db_pools = { version = "0.1.0-rc.2", features = ["sqlx_sqlite", "sqlx_mssql","sqlx_mysql"] }
sqlx = "0.5.13"
async-trait = "0.1.57"
data-encoding = "2.3.2"
rand = "0.8.5"
pbkdf2 = "0.11.0"
ring = "0.16.20"
rocket-multipart-form-data = "0.10.3"
base64 = "0.13.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.87"
rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["handlebars"] }
rocket-include-static-resources = "0.10.3"
chrono = "0.4.23"
#paste = "1.0.9"



[build]
# Pi 0/1
[target.arm-unknown-linux-gnueabihf]
linker = "arm-linux-gnueabihf-gcc"